UI for dictionary and notes

--- a/config/database.yml
+++ b/config/database.yml
@@ -81,18 +81,8 @@ test:
 production:
   primary: &primary_production
     <<: *default
-    database: ebook_project_production
-    username: ebook_project
-    password: <%= ENV["EBOOK_PROJECT_DATABASE_PASSWORD"] %>
-  cache:
-    <<: *primary_production
-    database: ebook_project_production_cache
-    migrations_paths: db/cache_migrate
-  queue:
-    <<: *primary_production
-    database: ebook_project_production_queue
-    migrations_paths: db/queue_migrate
-  cable:
-    <<: *primary_production
-    database: ebook_project_production_cable
-    migrations_paths: db/cable_migrate
+    host: <%= ENV['PG_HOST'] %>
+    database: <%= ENV['DATABASE_NAME'] %>
+    username: <%= ENV['PG_USERNAME'] %>
+    password: <%= ENV['PG_PASSWORD'] %>
+    port: <%= ENV['PG_PORT'] || 5432 %>
