--- a/config/database.yml
+++ b/config/database.yml
@@ -86,3 +86,7 @@ production:
     username: <%= ENV['PG_USERNAME'] %>
     password: <%= ENV['PG_PASSWORD'] %>
     port: <%= ENV['PG_PORT'] || 5432 %>
+  cable:
+    <<: *primary_production
+    database: <%= ENV['DATABASE_NAME'] %>_cable
+    migrations_paths: db/cable_migrate
